feat: Configure webpack for SCSS and JS module handling (develop)
Updated webpack configuration to support SCSS and JavaScript module imports.

This commit introduces the following changes:
- Added `css-loader`, `sass-loader`, and `style-loader` to devDependencies.
- Updated `webpack` and `webpack-cli` to their latest versions.
- Configured webpack to process SCSS files using `style-loader`, `css-loader`, and `sass-loader`.
- Modified the entry point to `./src/js/index.js`.
- Included the SCSS stylesheet in the main JavaScript entry point.
- Added basic SCSS styling for the body and an H1 element.
- Renamed `src/index.js` to `src/js/index.js` and `src/drag.js` to `src/js/drag.js` for better organization.
- Updated `HtmlWebpackPlugin` template path.
- Added SCSS variables for background and text colors.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,12 @@
+$bg-color:#000;
+$color:#fff;
+
 body{
-    background-color:#000;
-    color:#fff
+    background: $bg-color;
+    color: $color;
+
+    h1 {
+        text-decoration: underline;
+    }
 }
+
